Changes made between Gamera File Releases
=========================================

 - corrected border treatment in neighbor.hpp (affected mean()
   and rank()) and fixed another error in the rank() filter

 - plugin category cleanup:
    o "Convolution" moved to "Filter"
    o new category "Thinning"
    o new category "Transformation" for rotate, scale etc.
    o category "Threshold" moved to "Binarization"

 - new plugins for area Voronoi tesselation (category "Geometry")

 - new plugin labeled_region_edges (category "Edge")

 - display of classifier glyphs corrected when adding
   glyphs to the classifier (can be slow for large databases)

 - new image type MultiLabelCC (C++) resp. MlCc (Python)

 - the set() method now works for connected components


Version 3.2.3, Oct 08, 2009
----------------------------

 - documentation licensed under CC-BY-SA
   see the bottom of doc/src/index.txt for details

 - newer VIGRA version 1.6 included with some backports
   (see the file include/vigra/README for a list of modifications)

 - warnings about unavailable optional packages only printed
   when config.set("verbosity_level",1) has been set


Version 3.2.2, Oct 01, 2009
----------------------------

 - plugin loading message no longer printed in non-GUI scripts;
   in case these messages are needed, they can optionally be 
   enabled by config.set("verbosity_level",1)

 - bugfix in graph API: node values are now compared by value,
   not by PyObject pointer => nodes with labels greater than 256
   are now reliably found

 - plugin projection_cutting now works as expected


Version 3.2.1, Sep 17, 2009
----------------------------

 - sourceforge logo can optionally be suppressed in gendoc by
   passing sourceforge_logo=False to gendoc.gendoc

 - draw_text works again (thanks to S\oren Bjerregaard Vrist)

 - new page segmentation plugin bbox_merging

 - plugin projection_cutting no longer crashes, but still 
   needs further improvement in the presence of noise
