@@ -1,6 +1,10 @@
 Changes made between Gamera File Releases
 =========================================
 
+ - new plugins colors_to_labels (category "Color") and
+   ccs_from_labeled_image (category "Utility") for reading
+   in manually labeled ground truth data (thanks to Hasan Yilidz)
+
  - corrected border treatment in neighbor.hpp (affected mean()
    and rank()) and fixed another error in the rank() filter
 
